2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Change MaxWordSeg SepType::Score type from float to int.

	All calculations are already in int, and the casts are just
	unnecessary, and indicates that "float" is never intended.
	Change short int to int to be more machine-native.

	* src/worddef.h:
	  - Change SepType::Score type to int.
	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Change types of "bestScore", "tmps", "score[]" to int.
	  - Drop all (short int) type casts.

2012-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence):
	  - Declare vars where they are used.
	  - Drop unused var "cntArea".
	  - Rearrange source.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Add the missing case of "below vowel + tone mark".

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (static data, idxVowelToneMark):
	  - Move static data definitions to near FilterLatex::AdjustText().
	  - Rearrange the data so that 3 sets of characters are handled
	    separately (top marks, above marks, below marks).
	  - Split idxVowelToneMark() into idxTopMark(), idxAboveMark() and
	    idxBelowMark(); make them return -1 on failure, for easy data
	    management.
	  - Replace all 8-bit codes with hex.
	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Call the classifiers and use the data under new convention.
	  - Fix bug for the case of below vowels under Do Chada, To Patak.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Guard against buffer overflow on extra char (Sara-Aa).
	  - Change boundary checking condition, to improve the chance of
	    optimization.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Get rid of "chgchar" var by just writing output first and